--- a/style.css
+++ b/style.css
@@ -6,7 +6,12 @@ body {
     text-align: center;
 }
 
-.class {
+img {
+    max-width: 100%;
+    width: 1000px;
+  }
+
+.link {
     font-size: medium;
 }
 
@@ -15,3 +20,11 @@ a:visited { text-decoration: none; }
 a:hover { text-decoration: none; }
 a:active { text-decoration: none; }
 
+ul {
+    text-align: center;
+}
+
+h4,
+li {
+    text-align: left;
+}
